--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = APPTRIX_test.settings
+DJANGO_SETTINGS_MODULE = cryptoworld.settings
 python_files = tests.py test_*.py *_tests.py
