--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ djangorestframework==3.14.0
 requests==2.28.2
 Django~=4.1.5
 pytest~=7.2.2
+pytest-django==4.5.2
 django_extensions==3.2.1
 python-dotenv==1.0.0
+newsapi-python==0.2.7
