--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 API_KEY_NEWS = 'ключ полученный после регистрации на NewsAPI'
 API_KEY_COINBASE = 'ключ полученный после регистрации и добавления ключа API на coinbase'
 API_KEY_SECRET_COINBASE = 'секретный ключ полученный после регистрации и добавления ключа API на coinbase'
+SECRET_KEY_DJANGO = 'секретный ключ DJANGO'
